Fix gamepad haptics crashes

Fixes two crash bugs related to gamepad haptics discovered while
implementing haptics for VR devices.

In //device/gamepad, AbstractHapticGamepad posts delayed tasks that may
complete after the object has been destroyed. To fix, the unretained
references are replaced with weak pointers. Tasks that complete after
the object is destroyed are ignored. This may allow some vibration to
continue after a device is unexpectedly removed, but for most devices
it will not last longer than the maximum effect duration of 5 seconds.

In the renderer, GamepadHapticActuator posts a delayed task to stop
vibration after Promise callbacks are complete. This may crash if the
execution context is already null. To fix, stop vibration synchronously
when the context is null since there cannot be any pending callbacks.

BUG=918050

Change-Id: I17d80b2f914506d30c48acce156be4819cf1526a
Reviewed-on: https://chromium-review.googlesource.com/c/1396398
Commit-Queue: Matt Reynolds <mattreynolds@chromium.org>
Reviewed-by: Ovidio Henriquez <odejesush@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621678}
Former-commit-id: 4b63e01b1a909e277794821eb13ac585da1cfdaa